--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,8 @@
 # Created by https://www.toptal.com/developers/gitignore/api/Swift
 # Edit at https://www.toptal.com/developers/gitignore?templates=Swift
 
+.DS_Store
+
 ### Swift ###
 # Xcode
 #
@@ -23,15 +25,17 @@ playground.xcworkspace
 
 # Swift Package Manager
 # Add this line if you want to avoid checking in source code from Swift Package Manager dependencies.
-# Packages/
+/Packages
 # Package.pins
 # Package.resolved
 # *.xcodeproj
 # Xcode automatically generates this directory with a .xcworkspacedata file and xcuserdata
 # hence it is not needed unless you have added a package configuration file to your project
 # .swiftpm
+.swiftpm/configuration/registries.json
+.swiftpm/xcode/package.xcworkspace/contents.xcworkspacedata
 
-.build/
+/.build
 
 # CocoaPods
 # We recommend against adding the Pods directory to your .gitignore. However
